[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = [
    "Daniel Csillag <daniel.csillag@fgv.br>",
    "Claudio José Struchiner <claudio.struchiner@fgv.br>",
    "Guilherme Tegoni Goedert <guilherme.goedert@fgv.br>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
dowhy = "^0.11"
scikit-learn = "^1.1"
tqdm = "^4.66.1"
icecream = "^2.1.3"
pandas = "^2.1.4"
forestdiffusion = "^1.0.5"
causallib = "^0.9.6"
torch = "^2.1.2"
lightning = "^2.1.3"
scipy = "^1.11.4"
geomloss = "^0.2.6"
justcause = "^0.4"
causaldata = "^0.1.3"
ucimlrepo = "^0.0.3"
colorzero = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
